# ai4animation-rs

./: .gitignore  Cargo.toml  README.md  TUTORIAL.md  run.bat
.cargo/: config.toml
crates/anim-ai/: Cargo.toml
crates/anim-ai/src/: claude.rs  command.rs  context.rs  lib.rs  ollama.rs  openai.rs  provider.rs  session.rs
crates/anim-animation/: Cargo.toml
crates/anim-animation/src/: actor.rs  anim_recorder.rs  audio_sync.rs  blend.rs  blend_tree.rs  camera_anim.rs  cloth.rs  constraints.rs  contact.rs  dataset.rs  deep_phase.rs  gpu_motion_matching.rs  guidance.rs  hierarchy.rs  keyframe.rs  lib.rs  locomotion.rs  mesh_renderer.rs  motion.rs  motion_matching.rs  motion_module.rs  onnx_inference.rs  particles.rs  phase.rs  ragdoll.rs  retarget.rs  root_motion.rs  running_stats.rs  shape_keys.rs  skeleton_defs.rs  state_machine.rs  time_series.rs  tracking.rs  trajectory.rs
crates/anim-app/: Cargo.toml
crates/anim-app/src/: main.rs
crates/anim-core/: Cargo.toml
crates/anim-core/src/: component.rs  entity.rs  i18n.rs  input.rs  lib.rs  profiler.rs  scene.rs  time.rs
crates/anim-gui/: Cargo.toml
crates/anim-gui/src/: app_state.rs  lib.rs  recent_files.rs  scene_io.rs  shortcuts.rs  theme.rs
crates/anim-gui/src/panels/: ai_chat.rs  anim_recorder_panel.rs  asset_browser.rs  batch_panel.rs  blend_tree_editor.rs  cloth_panel.rs  console.rs  constraints_panel.rs  deep_phase_panel.rs  dope_sheet.rs  flash_timeline.rs  graph_editor.rs  hierarchy.rs  ik_panel.rs  inspector.rs  lights_panel.rs  material_editor.rs  menu_bar.rs  mod.rs  motion_editor.rs  motion_matching.rs  pose_editor.rs  profiler.rs  ragdoll_panel.rs  recorder.rs  render_settings.rs  shortcut_editor.rs  skybox_panel.rs  state_machine_editor.rs  timeline.rs  training.rs  video_export_panel.rs  viewport.rs
crates/anim-ik/: Cargo.toml
crates/anim-ik/src/: leg_ik.rs  lib.rs
crates/anim-import/: Cargo.toml
crates/anim-import/examples/: gen_samples.rs
crates/anim-import/src/: asset_manager.rs  batch_converter.rs  bvh_exporter.rs  bvh_importer.rs  fbx_exporter.rs  fbx_importer.rs  glb_exporter.rs  glb_importer.rs  lib.rs  mesh.rs  npz_exporter.rs  npz_importer.rs  presets.rs  procedural.rs  texture_loader.rs  usd_exporter.rs
crates/anim-math/: Cargo.toml
crates/anim-math/src/: batch.rs  lib.rs  quaternion.rs  rotation.rs  signal.rs  transform.rs  utility.rs  vector3.rs
crates/anim-render/: Cargo.toml
crates/anim-render/src/: camera.rs  capture.rs  debug_draw.rs  grid.rs  instancing.rs  lib.rs  lights.rs  post_process.rs  primitive.rs  render_settings.rs  renderer.rs  skinned_mesh.rs  skybox.rs  vertex.rs  video_export.rs
crates/anim-render/src/shaders/: bloom.wgsl  blur.wgsl  fullscreen.wgsl  fxaa.wgsl  gbuffer.wgsl  lighting.wgsl  line.wgsl  mesh.wgsl  shadow.wgsl  ssao.wgsl
docs/: TUTORIAL.md
samples/: README.md  creature_bird.bvh  creature_bird.fbx  creature_crab.bvh  creature_crab.fbx  creature_quadruped.bvh  creature_quadruped.fbx  creature_snake.bvh  creature_snake.fbx  creature_spider.bvh  creature_spider.fbx  humanoid_colored_run.fbx  humanoid_idle.bvh  humanoid_idle.fbx  humanoid_jump.bvh  humanoid_jump.fbx  humanoid_run.bvh  humanoid_run.fbx  humanoid_walk.bvh  humanoid_walk.fbx  scene_coureur.bvh  scene_coureur.fbx  scene_danseur.bvh  scene_danseur.fbx  scene_marcheur.bvh  scene_marcheur.fbx
tools/: convert_pt_to_onnx.py  train_locomotion.py
