[workspace]
members = [
    "crates/anim-math",
    "crates/anim-core",
    "crates/anim-import",
    "crates/anim-animation",
    "crates/anim-ik",
    "crates/anim-render",
    "crates/anim-gui",
    "crates/anim-ai",
    "crates/anim-app",
]
resolver = "2"

[workspace.dependencies]
# Math
glam = { version = "0.29", features = ["bytemuck"] }
ndarray = "0.16"
npyz = "0.8"

# Rendering
wgpu = "22"
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# GUI
egui = "0.29"
eframe = { version = "0.29", features = ["wgpu"] }
egui-wgpu = "0.29"
rfd = "0.15"

# 3D loading
gltf = { version = "1.4", features = ["utils"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling & logging
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"

# HTTP client (AI API calls)
ureq = { version = "3", features = ["json"] }

# ONNX Runtime (AI inference)
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }

# Concurrency
parking_lot = "0.12"
rayon = "1"

# Internal crates
anim-math = { path = "crates/anim-math" }
anim-core = { path = "crates/anim-core" }
anim-import = { path = "crates/anim-import" }
anim-animation = { path = "crates/anim-animation" }
anim-ik = { path = "crates/anim-ik" }
anim-render = { path = "crates/anim-render" }
anim-ai = { path = "crates/anim-ai" }
anim-gui = { path = "crates/anim-gui" }

[profile.release]
opt-level = 3
lto = "thin"
