[package]
name = "anim-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }

# HTTP client for API calls (local ollama + cloud APIs)
ureq = { version = "3", features = ["json"] }
