[package]
name = "anim-animation"
version = "0.1.0"
edition = "2021"

[dependencies]
anim-math = { workspace = true }
anim-import = { workspace = true }
glam = { workspace = true }
ndarray = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
ort = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
