[package]
name = "anim-import"
version = "0.1.0"
edition = "2021"

[dependencies]
anim-math = { workspace = true }
glam = { workspace = true }
ndarray = { workspace = true }
npyz = { workspace = true }
gltf = { workspace = true }
bytemuck = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
miniz_oxide = "0.8"
fbxcel = "0.9"
fbxcel-dom = "0.0.10"
